@@ -523,7 +523,7 @@
         <avro.version>1.3.3</avro.version>
         <cxf-rt-frontend-jaxrs.version>2.5.2</cxf-rt-frontend-jaxrs.version>
         <!-- Cassandra Dependencies -->
-        <cassandra.version>1.1.0</cassandra.version>
+        <cassandra.version>1.1.2</cassandra.version>
         <libthrift.version>0.7.0</libthrift.version>
         <hector.version>1.1-0</hector.version>
         <!-- Misc Dependencies -->
